--- a/modulo3.html
+++ b/modulo3.html
@@ -1,18 +1,49 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>PAGINA PRINCIPAL SOFTWARE LIBRE</title>
+<title>MODULO 3</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 
 <body>
 <div id="container">	
+	
 	<div id="header">
     	<h1><a href="index.html">DIPLOMADO DE <strong>SOFTWARE LIBRE</strong></a></h1>
 	</div>
+	
+	<div id="nav">
+    	<ul class="sf-menu dropdown">
+        	<li class="selected"><a href="index.html">PAGINA PRINCIPAL</a></li>
+            <li><a class="has_submenu">MODULOS</a>
+            	<ul>
+                	<li><a href="modulo1.html">MODULO 1: FRAMEWORKS</a></li>
+                    <li><a href="modulo2.html">MODULO 2: CONTROL DE VERSIONES</a></li>
+                    <li><a href="modulo3.html">MODULO 3: DESARROLLO CLOUD</a></li>
+                </ul>
+            </li>          
+            <li><a href="#">CONTACTO</a></li>
+        </ul>
+	</div>
+
+    <div id="body" class="has-slider">
+		<div id="content">
+            <div class="box">
+                <h2>MODULO 3: DESARROLLO CLOUD</h2>
+                <p>
+                    Gran parte del negocio del software, en cualquiera de sus vertientes, se está trasladando a la nube. Una razón esencial de ese movimiento es la reducción de costes. No hay nada más sagrado en una empresa que los costes. El desarrollo de productos no es una excepción. En la actualidad existen herramientas para programadores que permiten picar código en la nube: Codio, Cloud9, Codenvy o Nitrous son algunos ejemplos.
+                </p>
+                <img src="images/imagen3.png" width="540" height="255" />          
+            </div>
+        </div>
+        
+        
+    	<div class="clear"></div>
+    </div>
+
 </div>
+
 
 </body>
 </html>
-
 
