--- a/modulo1.html
+++ b/modulo1.html
@@ -18,11 +18,11 @@
             <li><a class="has_submenu">MODULOS</a>
             	<ul>
                 	<li><a href="modulo1.html ">MODULO 1: FRAMEWORKS</a></li>
-                    <li><a href="#">MODULO 2: CONTROL DE VERSIONES</a></li>
-                    <li><a href="#">MODULO 3: DESARROLLO CLOUD</a></li>
+                    <li><a href="modulo2.html">MODULO 2: CONTROL DE VERSIONES</a></li>
+                    <li><a href="modulo3.html">MODULO 3: DESARROLLO CLOUD</a></li>
                 </ul>
             </li>          
-            <li><a href="#">CONTACTO</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
 	</div>
 
