--- a/modulo2.html
+++ b/modulo2.html
@@ -19,10 +19,10 @@
             	<ul>
                 	<li><a href="modulo1.hmtl">MODULO 1: FRAMEWORKS</a></li>
                     <li><a href="modulo2.html">MODULO 2: CONTROL DE VERSIONES</a></li>
-                    <li><a href="#">MODULO 3: DESARROLLO CLOUD</a></li>
+                    <li><a href="modulo3.html">MODULO 3: DESARROLLO CLOUD</a></li>
                 </ul>
             </li>          
-            <li><a href="#">CONTACTO</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
 	</div>
 
